--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Primary_Orange">#FB6F2F</color>
     <color name="Secondary_White">#FFFFFF</color>
+    <color name="darkGreen">#388E3C</color>
+    <color name="gray">#757575</color>
+    <color name="primaryColor">#6200EE</color>
+    <color name="primaryColorDark">#3700B3</color>
+
 </resources>
