--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,28 +10,47 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="404dp"
+        android:layout_height="98dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/white">
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/ll1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="end|center_vertical"
-                android:contentDescription="@string/profile_image_desc"
-                android:padding="8dp"
-                android:src="@drawable/ic_profile_placeholder" />
+                android:id="@+id/logo_menu"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/Primary_Orange"
+                android:clickable="true"
+                android:contextClickable="true"
+                android:src="@drawable/logoenid" />
 
-        </FrameLayout>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/profile_image_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:clickable="true"
+                android:contextClickable="true"
+                android:src="@drawable/perfil_de_usuario_default"
+                app:shapeAppearanceOverlay="@style/circular" />
+        </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
