--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,51 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
+    android:padding="16dp"
     tools:context=".ui.home.HomeFragment">
 
-    <LinearLayout
-        android:id="@+id/ll1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/logo_menu"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
-            android:clickable="true"
-            android:contextClickable="true"
-            android:src="@drawable/logoenid"
-            android:background="@color/Primary_Orange"/>
-
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profile_image_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:clickable="true"
-            android:contextClickable="true"
-            app:shapeAppearanceOverlay="@style/circular"
-            android:src="@drawable/perfil_de_usuario_default" />
-    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ll1">
+        android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -53,14 +17,11 @@
                 android:id="@+id/ll2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
-                android:paddingRight="15dp"
-                android:paddingBottom="15dp"
+                android:padding="16dp"
                 android:gravity="center">
 
                 <LinearLayout
@@ -70,8 +31,8 @@
 
                     <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/profile_image"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         app:shapeAppearanceOverlay="@style/circular"
                         android:clickable="true"
                         android:contextClickable="true"
@@ -79,15 +40,17 @@
 
                     <MultiAutoCompleteTextView
                         android:id="@+id/multiAutoCompleteTextView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginStart="16dp"
                         />
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/img_camara"
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:layout_marginTop="16dp"
                     android:visibility="gone"/>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -98,14 +61,14 @@
 
                     <ImageView
                         android:id="@+id/camara_btn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:clickable="true"
                         android:contextClickable="true"
                         android:src="@drawable/camera_icon" />
 
                     <Space
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
