--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="?android:attr/windowBackground"
+    android:background="@color/white"
     tools:context=".ui.notifications.NotificationsFragment">
 
     <!-- Imagen de Perfil -->
@@ -57,28 +57,31 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <!-- Botón Editar Perfil -->
+
+    <!-- Botón Cerrar Sesión -->
+
     <Button
         android:id="@+id/button_edit_profile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="188dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/Primary_Orange"
         android:text="@string/editar_perfil"
         android:textColor="@android:color/white"
         app:cornerRadius="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_user_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_user_email" />
 
-    <!-- Botón Cerrar Sesión -->
     <Button
         android:id="@+id/button_logout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/black"
         android:text="Cerrar Sesión"
