--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -1,15 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
+    android:layout_margin="10dp"
     android:background="@drawable/post_shape_background"
-    android:paddingLeft="15dp"
-    android:paddingTop="15dp"
-    android:paddingRight="15dp"
-    android:paddingBottom="15dp">
+    android:padding="15dp">
 
     <LinearLayout
         android:id="@+id/ll2"
@@ -22,6 +17,7 @@
             android:id="@+id/profile_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginEnd="16dp"
             android:clickable="true"
             app:shapeAppearanceOverlay="@style/circular"
             android:contextClickable="true"
@@ -38,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:text="Nombre de usuario"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/date_of_post"
@@ -49,20 +45,21 @@
                 android:textSize="15sp"/>
         </LinearLayout>
     </LinearLayout>
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_below="@+id/ll2"
-        android:layout_height="wrap_content"
         android:id="@+id/body_post"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ll2"
         android:layout_marginTop="10dp"
         android:text="ESTE Es el BODY DEL POST"/>
 
     <ImageView
         android:id="@+id/post_image_body"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/body_post"
-        android:layout_marginHorizontal="100dp"
+        android:layout_marginTop="10dp"
         android:visibility="gone" />
 
 </RelativeLayout>
