--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -41,8 +41,8 @@
 
             <ImageView
                 android:id="@+id/search_btn"
-                android:layout_width="39dp"
-                android:layout_height="wrap_content"
+                android:layout_width="22dp"
+                android:layout_height="29dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="16dp"
                 android:clickable="true"
@@ -56,6 +56,7 @@
                 android:layout_height="50dp"
                 android:clickable="true"
                 android:contextClickable="true"
+                android:layout_marginRight="10dp"
                 android:src="@drawable/perfil_de_usuario_default"
                 app:shapeAppearanceOverlay="@style/circular" />
         </LinearLayout>
